log
Fri 05 May 2023 12:19:05 PM UTC: 
 tests:  0|5
total_score: 0/70
d9579c9
Fri 05 May 2023 12:57:37 PM UTC: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  0|5
total_score: 0/70
76cf31b
Fri 05 May 2023 01:00:02 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
06ed21f
Fri 05 May 2023 01:00:34 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
d1f00c3
Fri 05 May 2023 01:00:56 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
2988c54
Fri 05 May 2023 01:03:13 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 5/70
b9a20ce
Fri 05 May 2023 01:05:30 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 5/70
7956c16
Fri 05 May 2023 01:08:07 PM UTC: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
178b2e6
Fri 05 May 2023 01:10:59 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
97de295
Sat 06 May 2023 06:27:53 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
772c971
Sat 06 May 2023 06:51:14 PM UTC: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
265bf7b
Sat 06 May 2023 06:51:25 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f4c50b8
Sat 06 May 2023 06:52:43 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
9d2f5fb
Sat 06 May 2023 06:53:42 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
673686f
Sat 06 May 2023 07:10:43 PM UTC: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4167f9b
Sat 06 May 2023 07:11:39 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
942383e
Sat 06 May 2023 07:11:56 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
ed94769
Sat 06 May 2023 07:15:50 PM UTC: 
 sudoku.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
9b75b01
Sat 06 May 2023 07:25:41 PM UTC: 
 sudoku.c | 40 +++++++++++++++++++++++++++++-----------
 1 file changed, 29 insertions(+), 11 deletions(-)
 tests:  3|3
total_score: 25/70
fb6bdee
Sat 06 May 2023 07:29:43 PM UTC: 
 sudoku.c | 17 ++++++++---------
 1 file changed, 8 insertions(+), 9 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘r_fila’:
sudoku.c:61:3: error: expected ‘;’ before ‘}’ token
   61 |   }
      |   ^
Compilation failed
4d4ac1c
Sat 06 May 2023 07:29:51 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
6d9c3f7
Sat 06 May 2023 07:30:52 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|3
total_score: 25/70
09bf310
Sat 06 May 2023 07:31:07 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
a55c273
Sat 06 May 2023 07:31:55 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
425afe8
Sat 06 May 2023 07:33:50 PM UTC: 
 sudoku.c | 37 +------------------------------------
 1 file changed, 1 insertion(+), 36 deletions(-)
 tests:  3|3
total_score: 25/70
d7da177
